--- a/TensorFlow.ipynb
+++ b/TensorFlow.ipynb
@@ -509,24 +509,92 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>gagaflag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>boysboysboys.txt</td>\n",
+       "      <td>\\n\\nHey there sugar baby\\nSaw you twice at the...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>wishyouwerehere.txt</td>\n",
+       "      <td>\\n\\nIt's funny how things, they change\\nThe cl...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>thenyoudloveme.txt</td>\n",
+       "      <td>\\n\\nWhat if I were to leave you?\\nBut then, yo...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>cakelikeladygaga.txt</td>\n",
+       "      <td>\\n\\nStuntin' all day\\nSwag on a hundred millio...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>letsgocrazy.txt</td>\n",
+       "      <td>\\n\\nSummon up the mas! Play on the pan!\\nStari...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     file                                           sentence  \\\n",
+       "40       boysboysboys.txt  \\n\\nHey there sugar baby\\nSaw you twice at the...   \n",
+       "24    wishyouwerehere.txt  \\n\\nIt's funny how things, they change\\nThe cl...   \n",
+       "262    thenyoudloveme.txt  \\n\\nWhat if I were to leave you?\\nBut then, yo...   \n",
+       "178  cakelikeladygaga.txt  \\n\\nStuntin' all day\\nSwag on a hundred millio...   \n",
+       "125       letsgocrazy.txt  \\n\\nSummon up the mas! Play on the pan!\\nStari...   \n",
+       "\n",
+       "     gagaflag  \n",
+       "40          1  \n",
+       "24          1  \n",
+       "262         1  \n",
+       "178         1  \n",
+       "125         0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                           file  \\\n",
-      "87                  thefame.txt   \n",
-      "74               iwontdance.txt   \n",
-      "244         dancinincircles.txt   \n",
-      "121  millionreasonsworktape.txt   \n",
-      "123          knowyourrights.txt   \n",
-      "\n",
-      "                                              sentence  gagaflag  \n",
-      "87   \\n\\nI can't help myself I'm addicted to a life...         1  \n",
-      "74   \\n\\nI won't dance, don't ask me\\nI won't dance...         1  \n",
-      "244  \\n\\nTap down those boots while I beat around\\n...         1  \n",
-      "121  \\n\\nYou're giving me a million reasons to let ...         1  \n",
-      "123  \\n\\nThis is a public service announcement\\nWit...         0  \n",
+      "Train set size: 250\n",
       "INFO:tensorflow:Using default config.\n",
-      "INFO:tensorflow:Using config: {'_model_dir': 'tf_logs/', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x10fd21b38>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
+      "INFO:tensorflow:Using config: {'_model_dir': 'tf_logs/', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x1a2211c940>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
       "INFO:tensorflow:Calling model_fn.\n",
       "INFO:tensorflow:Initialize variable dnn/input_from_feature_columns/input_layer/sentence_hub_module_embedding/module/embeddings/part_0:0 from checkpoint b'/var/folders/z5/r3lc8_5n7klgg7d5z_tb9sgw0000gn/T/tfhub_modules/32f2b2259e1cc8ca58c876921748361283e73997/variables/variables' with embeddings\n",
       "INFO:tensorflow:Done calling model_fn.\n",
@@ -535,89 +603,163 @@
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
       "INFO:tensorflow:Saving checkpoints for 1 into tf_logs/model.ckpt.\n",
-      "INFO:tensorflow:loss = 90.13321, step = 1\n",
-      "INFO:tensorflow:global_step/sec: 78.8134\n",
-      "INFO:tensorflow:loss = 15.260078, step = 101 (1.270 sec)\n",
-      "INFO:tensorflow:global_step/sec: 86.8406\n",
-      "INFO:tensorflow:loss = 8.458542, step = 201 (1.152 sec)\n",
-      "INFO:tensorflow:global_step/sec: 85.757\n",
-      "INFO:tensorflow:loss = 4.0069027, step = 301 (1.166 sec)\n",
-      "INFO:tensorflow:global_step/sec: 87.1712\n",
-      "INFO:tensorflow:loss = 1.7835387, step = 401 (1.147 sec)\n",
-      "INFO:tensorflow:global_step/sec: 86.4152\n",
-      "INFO:tensorflow:loss = 1.0410707, step = 501 (1.157 sec)\n",
-      "INFO:tensorflow:global_step/sec: 83.7021\n",
-      "INFO:tensorflow:loss = 0.9165466, step = 601 (1.195 sec)\n",
-      "INFO:tensorflow:global_step/sec: 88.2461\n",
-      "INFO:tensorflow:loss = 0.7028922, step = 701 (1.133 sec)\n",
-      "INFO:tensorflow:global_step/sec: 88.2631\n",
-      "INFO:tensorflow:loss = 0.6447315, step = 801 (1.133 sec)\n",
-      "INFO:tensorflow:global_step/sec: 85.5218\n",
-      "INFO:tensorflow:loss = 0.40475884, step = 901 (1.169 sec)\n",
+      "INFO:tensorflow:loss = 95.448944, step = 1\n",
+      "INFO:tensorflow:global_step/sec: 77.6374\n",
+      "INFO:tensorflow:loss = 14.727301, step = 101 (1.289 sec)\n",
+      "INFO:tensorflow:global_step/sec: 81.9792\n",
+      "INFO:tensorflow:loss = 5.4160237, step = 201 (1.220 sec)\n",
+      "INFO:tensorflow:global_step/sec: 84.8332\n",
+      "INFO:tensorflow:loss = 2.9048536, step = 301 (1.179 sec)\n",
+      "INFO:tensorflow:global_step/sec: 85.0039\n",
+      "INFO:tensorflow:loss = 1.7301072, step = 401 (1.176 sec)\n",
+      "INFO:tensorflow:global_step/sec: 85.0075\n",
+      "INFO:tensorflow:loss = 0.9354475, step = 501 (1.176 sec)\n",
+      "INFO:tensorflow:global_step/sec: 85.4175\n",
+      "INFO:tensorflow:loss = 0.7404134, step = 601 (1.171 sec)\n",
+      "INFO:tensorflow:global_step/sec: 84.7813\n",
+      "INFO:tensorflow:loss = 0.70096326, step = 701 (1.179 sec)\n",
+      "INFO:tensorflow:global_step/sec: 81.7513\n",
+      "INFO:tensorflow:loss = 0.45348042, step = 801 (1.223 sec)\n",
+      "INFO:tensorflow:global_step/sec: 83.2215\n",
+      "INFO:tensorflow:loss = 0.41277674, step = 901 (1.202 sec)\n",
       "INFO:tensorflow:Saving checkpoints for 1000 into tf_logs/model.ckpt.\n",
-      "INFO:tensorflow:Loss for final step: 0.44491965.\n",
+      "INFO:tensorflow:Loss for final step: 0.37847218.\n",
       "INFO:tensorflow:Calling model_fn.\n",
       "INFO:tensorflow:Initialize variable dnn/input_from_feature_columns/input_layer/sentence_hub_module_embedding/module/embeddings/part_0:0 from checkpoint b'/var/folders/z5/r3lc8_5n7klgg7d5z_tb9sgw0000gn/T/tfhub_modules/32f2b2259e1cc8ca58c876921748361283e73997/variables/variables' with embeddings\n",
       "WARNING:tensorflow:Trapezoidal rule is known to produce incorrect PR-AUCs; please switch to \"careful_interpolation\" instead.\n",
       "WARNING:tensorflow:Trapezoidal rule is known to produce incorrect PR-AUCs; please switch to \"careful_interpolation\" instead.\n",
       "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Starting evaluation at 2018-05-24-00:17:44\n",
+      "INFO:tensorflow:Starting evaluation at 2018-05-24-15:21:16\n",
       "INFO:tensorflow:Graph was finalized.\n",
       "INFO:tensorflow:Restoring parameters from tf_logs/model.ckpt-1000\n",
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Finished evaluation at 2018-05-24-00:17:47\n",
-      "INFO:tensorflow:Saving dict for global step 1000: accuracy = 1.0, accuracy_baseline = 0.588, auc = 1.0, auc_precision_recall = 1.0, average_loss = 0.0028028798, global_step = 1000, label/mean = 0.588, loss = 0.35035998, precision = 1.0, prediction/mean = 0.5882406, recall = 1.0\n",
-      "INFO:tensorflow:Calling model_fn.\n",
-      "INFO:tensorflow:Initialize variable dnn/input_from_feature_columns/input_layer/sentence_hub_module_embedding/module/embeddings/part_0:0 from checkpoint b'/var/folders/z5/r3lc8_5n7klgg7d5z_tb9sgw0000gn/T/tfhub_modules/32f2b2259e1cc8ca58c876921748361283e73997/variables/variables' with embeddings\n",
-      "WARNING:tensorflow:Trapezoidal rule is known to produce incorrect PR-AUCs; please switch to \"careful_interpolation\" instead.\n",
-      "WARNING:tensorflow:Trapezoidal rule is known to produce incorrect PR-AUCs; please switch to \"careful_interpolation\" instead.\n",
-      "INFO:tensorflow:Done calling model_fn.\n",
-      "INFO:tensorflow:Starting evaluation at 2018-05-24-00:17:48\n",
-      "INFO:tensorflow:Graph was finalized.\n",
-      "INFO:tensorflow:Restoring parameters from tf_logs/model.ckpt-1000\n",
-      "INFO:tensorflow:Running local_init_op.\n",
-      "INFO:tensorflow:Done running local_init_op.\n",
-      "INFO:tensorflow:Finished evaluation at 2018-05-24-00:17:50\n",
-      "INFO:tensorflow:Saving dict for global step 1000: accuracy = 0.8727273, accuracy_baseline = 0.5272727, auc = 0.9429709, auc_precision_recall = 0.9608737, average_loss = 0.44526142, global_step = 1000, label/mean = 0.5272727, loss = 24.489378, precision = 0.89285713, prediction/mean = 0.51017034, recall = 0.86206895\n",
-      "Training set accuracy: 1.0\n",
-      "Test set accuracy: 0.8727272748947144\n"
+      "INFO:tensorflow:Finished evaluation at 2018-05-24-15:21:18\n",
+      "INFO:tensorflow:Saving dict for global step 1000: accuracy = 0.8545455, accuracy_baseline = 0.7090909, auc = 0.8293268, auc_precision_recall = 0.91832805, average_loss = 0.7423719, global_step = 1000, label/mean = 0.7090909, loss = 40.830456, precision = 0.8780488, prediction/mean = 0.7328026, recall = 0.9230769\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>gagaflag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>nofloods.txt</td>\n",
+       "      <td>\\n\\nI never ever thought I'd live away \\nFrom ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>filthypop.txt</td>\n",
+       "      <td>\\n\\nHello! Mr.Radio \\nGot her pink tights \\nAn...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>overpoweredbyfunk.txt</td>\n",
+       "      <td>\\n\\nIf you ain't reggae for it..funk out!\\nNo-...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>herewegoagain.txt</td>\n",
+       "      <td>\\n\\nAll my friends are going out, \\nBut I've b...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>firefly.txt</td>\n",
+       "      <td>\\n\\nI call her Firefly\\nCause, oh, my\\nShe rad...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      file                                           sentence  \\\n",
+       "293           nofloods.txt  \\n\\nI never ever thought I'd live away \\nFrom ...   \n",
+       "207          filthypop.txt  \\n\\nHello! Mr.Radio \\nGot her pink tights \\nAn...   \n",
+       "183  overpoweredbyfunk.txt  \\n\\nIf you ain't reggae for it..funk out!\\nNo-...   \n",
+       "259      herewegoagain.txt  \\n\\nAll my friends are going out, \\nBut I've b...   \n",
+       "130            firefly.txt  \\n\\nI call her Firefly\\nCause, oh, my\\nShe rad...   \n",
+       "\n",
+       "     gagaflag  \n",
+       "293         1  \n",
+       "207         1  \n",
+       "183         0  \n",
+       "259         1  \n",
+       "130         1  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set size: 55\n",
+      "Test set accuracy: 0.8545454740524292\n"
      ]
     }
    ],
    "source": [
     "import tensorflow as tf\n",
+    "import tensorflow_hub as hub\n",
     "from tensorGaga import get_gaga_as_pandas_datasets\n",
     "\n",
     "tf.logging.set_verbosity(tf.logging.INFO)\n",
     "tf.reset_default_graph()\n",
     "\n",
     "train_df, test_df = get_gaga_as_pandas_datasets()\n",
-    "print(train_df.head())\n",
+    "display(train_df.head())\n",
+    "print (\"Train set size: %d\"%len(train_df))\n",
     "\n",
-    "# Training input on the whole training set with no limit on training epochs. (train)\n",
-    "# test w/ training data (verify).  test w/ test data (test)\n",
+    "# Training input on the whole training set with no limit on training epochs. (train then test)\n",
     "train_input_fn = tf.estimator.inputs.pandas_input_fn(train_df, train_df[\"gagaflag\"], num_epochs=None, shuffle=True)\n",
-    "predict_train_input_fn = tf.estimator.inputs.pandas_input_fn(train_df, train_df[\"gagaflag\"], shuffle=False)\n",
     "predict_test_input_fn = tf.estimator.inputs.pandas_input_fn(test_df, test_df[\"gagaflag\"], shuffle=False)\n",
     "\n",
-    "# hmm not sure what this does exactly...\n",
-    "import tensorflow_hub as hub\n",
+    "# this stuff is magic, there are various text categorizations u can re-use on tfhub.dev for various languages\n",
     "embedded_text_feature_column = hub.text_embedding_column(\n",
     "    key=\"sentence\", module_spec=\"https://tfhub.dev/google/nnlm-en-dim128/1\")\n",
     "\n",
+    "# train 3 layer net of input(4000?)-500-100-2 \n",
     "estimator = tf.estimator.DNNClassifier(\n",
     "    hidden_units=[500, 100],\n",
     "    feature_columns=[embedded_text_feature_column],\n",
     "    model_dir=\"tf_logs/\", n_classes=2,\n",
     "    optimizer=tf.train.AdagradOptimizer(learning_rate=0.003))\n",
     "\n",
+    "#train and test\n",
     "estimator.train(input_fn=train_input_fn, steps=1000)\n",
-    "\n",
-    "train_eval_result = estimator.evaluate(input_fn=predict_train_input_fn)  # expect 1.0\n",
     "test_eval_result = estimator.evaluate(input_fn=predict_test_input_fn)    # expect ~ .80\n",
     "\n",
-    "print (\"Training set accuracy: {accuracy}\".format(**train_eval_result))\n",
+    "display(test_df.head())\n",
+    "print (\"Test set size: %d\"%len(test_df))\n",
     "print (\"Test set accuracy: {accuracy}\".format(**test_eval_result))\n"
    ]
   },
@@ -625,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<B>Amazing !!!</B>   \n",
+    "<B>Amazing !!!</B>  (Other than all this excessive logging I can't trim down w/o eliminating it all)\n",
     "\n",
     "The above example & output shows how easy (but opaque) it is to use a builtin DeepNeuralNetClassifier (DNNClassifer).  You hardly have to do any coding and it works just as well (better) than a hand built classifier.\n",
     "\n",
