--- a/notebooks/Intro.ipynb
+++ b/notebooks/Intro.ipynb
@@ -12,10 +12,10 @@
     "- <a href='LogisticalRegression.ipynb'>Logistical Regression</a>\n",
     "- <a href='FeatureEngineering.ipynb'>Feature Engineering</a>\n",
     "- <a href='TensorFlow.ipynb'>Evaluating Google TensorFlow</a>\n",
+    "- <a href='PyTorch.ipynb'>Evaluating PyTorch</a>\n",
     "\n",
     "Next planned sections:\n",
     "- GPU vs CPU vs TPU evaluation\n",
-    "- Experience with PyTorch\n",
     "- Experience with Amazon's Sage Maker\n",
     "- Experience with Microsoft ML Studio\n",
     "- Experience with h2o.ai\n",
