--- a/notebooks/Intro.ipynb
+++ b/notebooks/Intro.ipynb
@@ -12,7 +12,7 @@
     "- <a href='LogisticalRegression.ipynb'>Logistical Regression</a>\n",
     "- <a href='FeatureEngineering.ipynb'>Feature Engineering</a>\n",
     "- <a href='TensorFlow.ipynb'>Evaluating Google TensorFlow</a>\n",
-    "- <a href='PyTorch.ipynb'>Evaluating PyTorch</a>\n",
+    "- <a href='PyTorch.ipynb'>Evaluating PyTorch and Neural Nets</a>\n",
     "\n",
     "Next planned sections:\n",
     "- GPU vs CPU vs TPU evaluation\n",
