--- a/notebooks/TensorFlow.ipynb
+++ b/notebooks/TensorFlow.ipynb
@@ -792,6 +792,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TensorBoard\n",
+    "\n",
+    "Final Note -- Tensorboard is really good for demos.  It blows away what PyTorch and others offer (which is largely nothing) from the perspective of built-in graphing and visualization.   \n",
+    "\n",
+    "As with all complaints of TensorFlow -- the seperation of graph state and operation make it rather confusing to know where to add code to capture statistics that will show up properly in TensorBoard.  I spent hours fiddling with it (tf.summaries and where to put them), but after it worked it was really nice.  Be warned of the learning curve !!\n",
+    "\n",
+    "![title](img/tb-1.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
