--- a/notebooks/Intro.ipynb
+++ b/notebooks/Intro.ipynb
@@ -15,15 +15,19 @@
     "- <a href='PyTorch.ipynb'>Evaluating PyTorch and Neural Nets</a>\n",
     "\n",
     "Next planned sections:\n",
-    "- GPU vs CPU vs TPU evaluation\n",
+    "- Experience with MXNET\n",
     "- Experience with Amazon's Sage Maker\n",
-    "- Experience with Microsoft ML Studio\n",
+    "- Experience with Microsoft ML Studio & CNTK\n",
+    "- Practical Implementation - XGBoost and Random Forests\n",
+    "- Advanced Neural Networks - GANS, CNN, RNN \n",
     "- Experience with h2o.ai\n",
     "- Real world problems to solve / experiement with\n",
+    "- GPU vs CPU vs TPU evaluation\n",
     "\n",
     "Other key things I have been reading/watching:\n",
     "- Lectures from folks like Ian Goodfellow and other Conference speakers\n",
     "- Coursera's deeplearning.ai series (Andrew Ng's next courses)\n",
+    "- Considering the fast.ai series (but prob hold off for a bit as I am in course overload)\n",
     "- Various blogs on Medium and following some of the famous folks on Twitter like Jeff Dean\n",
     "- Listening to Data Skeptic and ThisWeekInMachineLearningAndAI(TwimlAI) podcasts\n",
     "- Random Youtube views not excluding Siraj Raval\n",
