--- a/notebooks/Intro.ipynb
+++ b/notebooks/Intro.ipynb
@@ -17,7 +17,7 @@
     "Next planned sections:\n",
     "- Experience with MXNET\n",
     "- Experience with Amazon's Sage Maker\n",
-    "- Experience with Microsoft ML Studio & CNTK\n",
+    "- Experience with Microsoft Azure ML Studio & CNTK\n",
     "- Practical Implementation - XGBoost and Random Forests\n",
     "- Advanced Neural Networks - GANS, CNN, RNN \n",
     "- Experience with h2o.ai\n",
