minor nb cleanup

--- a/notebooks/Mxnet.ipynb
+++ b/notebooks/Mxnet.ipynb
@@ -9,7 +9,7 @@
     "Yet another framework?  http://mxnet.incubator.apache.org/\n",
     "\n",
     "\n",
-    "Probably time to do something a little different this time.\n",
+    "Probably time to do something a little different this time.   This is getting bit dull.\n",
     "\n"
    ]
   },
