--- a/notebooks/PyTorch.ipynb
+++ b/notebooks/PyTorch.ipynb
@@ -618,13 +618,13 @@
     "class GagaNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(GagaNet, self).__init__()\n",
-    "        self.inp = nn.Linear(500, 20, bias=False)\n",
-    "        self.hid = nn.Linear(20, 1, bias=False)\n",
+    "        self.inp = nn.Linear(500, 20, bias=False)   # fully connected linear layers - 500 input to 20 output\n",
+    "        self.hid = nn.Linear(20, 1, bias=False)     # fc layer for hidden 20 input nodes, 1 output\n",
     "\n",
     "    # forward prop -wrap both steps in sigmoid\n",
     "    def forward(self, x):\n",
     "        x = tfun.sigmoid(self.inp(x))  # oddly works better w/o this sigmoid\n",
-    "        x = tfun.sigmoid(self.hid(x))\n",
+    "        x = tfun.sigmoid(self.hid(x))  \n",
     "        return x\n",
     "\n",
     "net = GagaNet()\n",
@@ -664,10 +664,10 @@
     "testX = xMatrix[partition:]\n",
     "testY = yArr[partition:]\n",
     "\n",
-    "input = torch.tensor(xMatrix, dtype=torch.float)  # m x 500\n",
+    "input = torch.tensor(xMatrix, dtype=torch.float)             # m x 500\n",
     "target = torch.tensor(yArr, dtype=torch.float).view(-1,1)    # 1 x m\n",
-    "test_input = torch.tensor(testX, dtype=torch.float)  # m x 500\n",
-    "test_target =torch.tensor(testY, dtype=torch.float).view(-1,1)\n"
+    "test_input = torch.tensor(testX, dtype=torch.float)          # m x 500\n",
+    "test_target = torch.tensor(testY, dtype=torch.float).view(-1,1)\n"
    ]
   },
   {
@@ -704,16 +704,17 @@
     }
    ],
    "source": [
+    "# run the NN training\n",
     "import torch.optim as optim\n",
-    "\n",
     "torch.set_printoptions(threshold=10)   # limit tensor printing\n",
+    "\n",
     "criterion = nn.MSELoss()   # loss function mean-square-error\n",
     "optimizer = optim.SGD(net.parameters(), lr=0.01) # stochastic grad descent\n",
     "\n",
     "# in your training loop:\n",
     "for epoch in range(2500):\n",
     "    optimizer.zero_grad()   # zero the gradient buffers\n",
-    "    output = net(input)     # forward prop\n",
+    "    output = net(input)     # forward prop __call__ \n",
     "    loss = criterion(output, target)   # loss optimization    \n",
     "    loss.backward()         # auto backward prop\n",
     "    optimizer.step()        # does the update of applying gradients to weights\n",
