--- a/notebooks/Intro.ipynb
+++ b/notebooks/Intro.ipynb
@@ -15,7 +15,7 @@
     "- <a href='PyTorch.ipynb'>Evaluating PyTorch and Neural Nets</a>\n",
     "\n",
     "Next planned sections:\n",
-    "- <a href='Mxnet.ipynb'>My life with MXNET</a>\n",
+    "- <a href='Mxnet-Gluon.ipynb'>MxNet, Gluon, etc etc - Framework Overview</a>\n",
     "- Experience with Amazon's Sage Maker\n",
     "- Experience with Microsoft Azure ML Studio & CNTK\n",
     "- Practical Implementation - XGBoost and Random Forests\n",
