--- a/notebooks/Intro.ipynb
+++ b/notebooks/Intro.ipynb
@@ -13,6 +13,7 @@
     "- <a href='FeatureEngineering.ipynb'>Feature Engineering</a>\n",
     "- <a href='TensorFlow.ipynb'>Evaluating Google TensorFlow</a>\n",
     "- <a href='PyTorch.ipynb'>Evaluating PyTorch and Neural Nets</a>\n",
+    "- <a href='PyTorchNN.ipynb'>More on Neural Nets - CNN and RNN using PyTorch</a>\n",
     "\n",
     "Next planned sections:\n",
     "- <a href='Mxnet-Gluon.ipynb'>MxNet, Gluon, etc etc - Framework Overview</a>\n",
@@ -39,6 +40,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
