--- a/diamonds/Diamond-Analysis-2.ipynb
+++ b/diamonds/Diamond-Analysis-2.ipynb
@@ -323,13 +323,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 143,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# reuse\n",
+    "from sklearn import datasets, linear_model\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.utils import shuffle\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
@@ -449,9 +451,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn import datasets, linear_model\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "from sklearn.utils import shuffle\n",
+    "\n",
     "\n",
     "diamonds = pd.read_csv('diamonds-1a.csv')\n",
     "diamonds = shuffle(diamonds, random_state=0)   # is this a repeatable shuffle by defautl w/o param\n",
@@ -686,13 +686,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Back to fine tuning the XGB"
+    "## Back to fine tuning the XGB\n",
+    "\n",
+    "But can I get it any higher than Multi-LinearRegression 98% ?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 142,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -761,6 +765,16 @@
     "for i in [1,2,3,4,5]:\n",
     "    scores.append(run_emsemble(diamonds, True, 0.1, 100, i, False))\n",
     "plt.plot(scores)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My Analysis is that Linear Regression works pretty well and I dont know how to tune XGB to get a higher score.\n",
+    "For now let me move to additional data.\n",
+    "\n",
+    "[Diamond-Analysis-3](Diamond-Analysis-3.ipynb)\n"
    ]
   }
  ],
