--- a/diamonds/Diamond-Analysis-2.ipynb
+++ b/diamonds/Diamond-Analysis-2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "[8 rows x 22 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -391,57 +391,13 @@
     }
    ],
    "source": [
-    "from sklearn import datasets, linear_model\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "from sklearn.utils import shuffle\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from sklearn.utils import shuffle\n",
+    "from myutils import run_linear2 \n",
+    "\n",
     "%matplotlib inline\n",
-    "\n",
-    "# move to lib\n",
-    "def run_linear2(data, target, norm=False):\n",
-    "    # Split the targets into training/testing sets\n",
-    "    y_train = target[:-20]\n",
-    "    y_test = target[-20:]\n",
-    "\n",
-    "    # Split the data into training/testing sets\n",
-    "    X_train = data[:-20]\n",
-    "    X_test = data[-20:]\n",
-    "\n",
-    "    # Create linear regression object\n",
-    "    regr = linear_model.LinearRegression(normalize=norm)\n",
-    "\n",
-    "    # Train the model using the training sets\n",
-    "    regr.fit(X_train, y_train)\n",
-    "\n",
-    "    # Make predictions using the testing set\n",
-    "    y_pred = regr.predict(X_test)\n",
-    "\n",
-    "    # Score ?\n",
-    "    print('Score: ', regr.score(X_test, y_test))\n",
-    "    \n",
-    "    # The coefficients\n",
-    "    coeff_df = pd.DataFrame(regr.coef_.T, X_train.columns, columns=['Coefficient'])  \n",
-    "    coeff_df.plot(kind='bar')\n",
-    "    plt.show()\n",
-    "    \n",
-    "    # The mean squared error\n",
-    "    print(\"Mean squared error: %.2f\"\n",
-    "          % mean_squared_error(y_test, y_pred))\n",
-    "    # Explained variance score: 1 is perfect prediction\n",
-    "    print('Variance score: %.2f' % r2_score(y_test, y_pred))\n",
-    "\n",
-    "    print (X_test.sample(n=2,random_state=1))\n",
-    "    f = y_test.sample(n=7,random_state=1)\n",
-    "    g = pd.DataFrame(data=y_pred, columns=['actual']).sample(n=7,random_state=1)\n",
-    "    g['predict'] = f.values\n",
-    "    g['diff'] = g['actual'] - g['predict']\n",
-    "    g['diff%'] = (abs(g['actual'] - g['predict'] ) / abs(g['actual'])) * 100\n",
-    "    print (g)\n",
-    "    print (y_test.describe())\n",
-    "    \n",
-    "\n",
     "\n",
     "diamonds = pd.read_csv('diamonds-1a.csv')\n",
     "diamonds = shuffle(diamonds, random_state=0)   # is this a repeatable shuffle by defautl w/o param\n",
